--- a/templates/update_agent.html
+++ b/templates/update_agent.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Update Agent - {{ agent.name }}</h1>
 <form method="post">
-{#    {% csrf_token %}#}
+    {% csrf_token %}
     <textarea name="status" rows="4" cols="50">{{ agent.status }}</textarea><br>
     <button type="submit">Update</button>
 </form>
